ajustes no código e atualização do notebook

--- a/analises.ipynb
+++ b/analises.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/markdown": [
-       "# ---Relatório de Análises Genéricas---"
+       "# **Relatório de Análises Genéricas**"
       ]
      },
      "metadata": {},
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Informações Gerais:"
+       "### Informações Gerais:"
       ]
      },
      "metadata": {},
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/markdown": [
-       " **Linhas:** 209"
+       "- **Linhas:** 209"
       ]
      },
      "metadata": {},
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/markdown": [
-       " **Colunas:** 16"
+       "- **Colunas:** 16"
       ]
      },
      "metadata": {},
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Colunas Categóricas:"
+       "#### Colunas Categóricas:"
       ]
      },
      "metadata": {},
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Colunas Numéricas:"
+       "#### Colunas Numéricas:"
       ]
      },
      "metadata": {},
@@ -217,7 +217,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Primeiras 5 linhas:"
+       "### Primeiras 5 linhas:"
       ]
      },
      "metadata": {},
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Últimas 5 linhas:"
+       "### Últimas 5 linhas:"
       ]
      },
      "metadata": {},
@@ -273,7 +273,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Amostra de 5 linhas:"
+       "### Amostra de 5 linhas:"
       ]
      },
      "metadata": {},
@@ -283,25 +283,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "╒═════╤═══════════════╤═════════════════════╤═════════════╤═══════════════╤════════════╤═════════════╤═══════════════════════════════╤════════════════════╤═════════════════════╤════════════════════════════════╤═════════════════════════╤══════════════════════════════════════╤══════════════════╤════════════════╤════════════════════════════════════════════════════════════════════════════════════╤══════════════════════════════════════════════════════════════════════════════════════════════════════╕\n",
-      "│     │ Destination   │ Region              │ Country     │ Category      │   Latitude │   Longitude │ Approximate Annual Tourists   │ Currency           │ Majority Religion   │ Famous Foods                   │ Language                │ Best Time to Visit                   │ Cost of Living   │ Safety         │ Cultural Significance                                                              │ Description                                                                                          │\n",
-      "╞═════╪═══════════════╪═════════════════════╪═════════════╪═══════════════╪════════════╪═════════════╪═══════════════════════════════╪════════════════════╪═════════════════════╪════════════════════════════════╪═════════════════════════╪══════════════════════════════════════╪══════════════════╪════════════════╪════════════════════════════════════════════════════════════════════════════════════╪══════════════════════════════════════════════════════════════════════════════════════════════════════╡\n",
-      "│ 132 │ Lucerne       │ Central Switzerland │ Switzerland │ City          │    47.0514 │     8.30694 │ 1.5 million                   │ Swiss franc (CHF)  │ Roman Catholic      │ Fondue, Rsti, Raclette                                │ German, French          │ Spring (Apr-May) or Fall (Sep-Oct)   │ Medium-high      │ Generally safe │ Picturesque city known for historic center and lake.                               │ A picturesque city on Lake Lucerne, known for its historic center, Chapel Bridge, and Lion Monument. │\n",
-      "├─────┼───────────────┼─────────────────────┼─────────────┼───────────────┼────────────┼─────────────┼───────────────────────────────┼────────────────────┼─────────────────────┼────────────────────────────────┼─────────────────────────┼──────────────────────────────────────┼──────────────────┼────────────────┼────────────────────────────────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 186 │ Marsaskala    │ Southern Region     │ Malta       │ Town          │    35.7283 │    14.5692  │ 100,000                       │ Euro (EUR)         │ Roman Catholic      │ Pastizzi, Rabbit Stew, Imqaret │ Maltese, English        │ Spring (April-May) or Fall (Sep-Oct) │ Medium           │ Generally safe │ A coastal town with beautiful beaches, historical sites, and a relaxed atmosphere. │ nan                                                                                                  │\n",
-      "├─────┼───────────────┼─────────────────────┼─────────────┼───────────────┼────────────┼─────────────┼───────────────────────────────┼────────────────────┼─────────────────────┼────────────────────────────────┼─────────────────────────┼──────────────────────────────────────┼──────────────────┼────────────────┼────────────────────────────────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 135 │ Jungfraujoch  │ Bern                │ Switzerland │ Mountain Pass │    46.5381 │     7.98694 │ 350,000                       │ Swiss franc (CHF)  │ Protestant          │ Fondue, Rsti, Raclette                                │ German, French          │ Year-round                           │ High             │ Generally safe │ Highest railway station in Europe with panoramic views.                            │ The highest railway station in Europe, offering panoramic views of the Swiss Alps.                   │\n",
-      "├─────┼───────────────┼─────────────────────┼─────────────┼───────────────┼────────────┼─────────────┼───────────────────────────────┼────────────────────┼─────────────────────┼────────────────────────────────┼─────────────────────────┼──────────────────────────────────────┼──────────────────┼────────────────┼────────────────────────────────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 130 │ Zurich        │ Zurich              │ Switzerland │ City          │    47.3769 │     8.54169 │ 3 million                     │ Swiss franc (CHF)  │ Protestant          │ Fondue, Rsti, Raclette                                │ German, French, Italian │ Spring (Apr-May) or Fall (Sep-Oct)   │ High             │ Generally safe │ Largest city known for finance, museums, and lakefront.                            │ The largest city in Switzerland, known for its financial district, museums, and beautiful lakefront. │\n",
-      "├─────┼───────────────┼─────────────────────┼─────────────┼───────────────┼────────────┼─────────────┼───────────────────────────────┼────────────────────┼─────────────────────┼────────────────────────────────┼─────────────────────────┼──────────────────────────────────────┼──────────────────┼────────────────┼────────────────────────────────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 145 │ Bodrum        │ Aegean Region       │ Turkey      │ Town          │    37.1346 │    27.3842  │ 1 million                     │ Turkish lira (TRY) │ Muslim              │ Kebab, Baklava, Dolma          │ Turkish                 │ Spring (Apr-May) or Fall (Sep-Oct)   │ Medium-high      │ Generally safe │ Coastal town known for beaches and ancient ruins.                                  │ A popular coastal town known for its beaches, nightlife, and ancient ruins.                          │\n",
-      "╘═════╧═══════════════╧═════════════════════╧═════════════╧═══════════════╧════════════╧═════════════╧═══════════════════════════════╧════════════════════╧═════════════════════╧════════════════════════════════╧═════════════════════════╧══════════════════════════════════════╧══════════════════╧════════════════╧════════════════════════════════════════════════════════════════════════════════════╧══════════════════════════════════════════════════════════════════════════════════════════════════════╛\n"
+      "╒═════╤═══════════════╤════════════════╤═══════════╤══════════════╤════════════╤═════════════╤═══════════════════════════════╤═════════════════════╤═════════════════════╤════════════════════════════════╤════════════╤═══════════════════════════════════════╤══════════════════╤═════════════════════════════════════════════╤══════════════════════════════════════════════════════════════════════════════════════════════════════════════╤════════════════════════════════════════════════════════════════════════════════════════════════════════╕\n",
+      "│     │ Destination   │ Region         │ Country   │ Category     │   Latitude │   Longitude │ Approximate Annual Tourists   │ Currency            │ Majority Religion   │ Famous Foods                   │ Language   │ Best Time to Visit                    │ Cost of Living   │ Safety                                      │ Cultural Significance                                                                                        │ Description                                                                                            │\n",
+      "╞═════╪═══════════════╪════════════════╪═══════════╪══════════════╪════════════╪═════════════╪═══════════════════════════════╪═════════════════════╪═════════════════════╪════════════════════════════════╪════════════╪═══════════════════════════════════════╪══════════════════╪═════════════════════════════════════════════╪══════════════════════════════════════════════════════════════════════════════════════════════════════════════╪════════════════════════════════════════════════════════════════════════════════════════════════════════╡\n",
+      "│  93 │ Crete         │ Crete          │ Greece    │ Island       │    35.2437 │    25.0479  │ 3 million                     │ Euro                │ Greek Orthodox      │ Seafood, Greek salad, Moussaka │ Greek      │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe                              │ Largest island in Greece, known for ancient ruins, beaches, and mountains.                                   │ nan                                                                                                    │\n",
+      "├─────┼───────────────┼────────────────┼───────────┼──────────────┼────────────┼─────────────┼───────────────────────────────┼─────────────────────┼─────────────────────┼────────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼─────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ 140 │ Istanbul      │ Istanbul       │ Turkey    │ City         │    41.0082 │    28.9784  │ 15 million                    │ Turkish lira (TRY)  │ Muslim              │ Kebab, Baklava, Dolma          │ Turkish    │ Spring (Apr-May) or Fall (Sep-Oct)    │ Medium-high      │ Generally safe, but be aware of pickpockets │ Historic city straddling Europe and Asia with significant landmarks.                                         │ A historic city straddling Europe and Asia, known for its Hagia Sophia, Blue Mosque, and Grand Bazaar. │\n",
+      "├─────┼───────────────┼────────────────┼───────────┼──────────────┼────────────┼─────────────┼───────────────────────────────┼─────────────────────┼─────────────────────┼────────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼─────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│   5 │ Cinque Terre  │ Liguria        │ Italy     │ Coastal Town │    44.1318 │     9.65334 │ 3 million                     │ Euro                │ Roman Catholic      │ Seafood, Pesto                 │ Italian    │ Spring (April-May) or Fall (Sept-Oct) │ Medium-high      │ Generally safe, but be aware of crowds      │ A group of five colorful villages along the Italian Riviera, known for their stunning landscapes and hiking. │ Scenic coastal towns connected by breathtaking hiking trails and beaches.                              │\n",
+      "├─────┼───────────────┼────────────────┼───────────┼──────────────┼────────────┼─────────────┼───────────────────────────────┼─────────────────────┼─────────────────────┼────────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼─────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│  84 │ Vladivostok   │ Primorsky Krai │ Russia    │ City         │    43.5651 │   131.886   │ 1 million                     │ Russian Ruble (RUB) │ Russian Orthodox    │ Borscht, Pelmeni, Blini        │ Russian    │ Spring (May-June) or Fall (Sept-Oct)  │ Medium-high      │ Generally safe                              │ Port city on the Pacific Ocean known for seafood, museums, and scenic views.                                 │ Offers stunning coastal landscapes and a unique cultural experience.                                   │\n",
+      "├─────┼───────────────┼────────────────┼───────────┼──────────────┼────────────┼─────────────┼───────────────────────────────┼─────────────────────┼─────────────────────┼────────────────────────────────┼────────────┼───────────────────────────────────────┼──────────────────┼─────────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ 126 │ Uppsala       │ Uppsala County │ Sweden    │ City         │    59.8581 │    17.6389  │ 150,000                       │ Swedish krona (SEK) │ Protestant          │ Kttbullar, Fika, Jansson's Temptation                                │ Swedish    │ Spring (May-June) or Fall (Sept-Oct)  │ Medium           │ Generally safe                              │ University city known for cathedral, castle, and museums.                                                    │ A university city known for its cathedral, castle, and museums.                                        │\n",
+      "╘═════╧═══════════════╧════════════════╧═══════════╧══════════════╧════════════╧═════════════╧═══════════════════════════════╧═════════════════════╧═════════════════════╧════════════════════════════════╧════════════╧═══════════════════════════════════════╧══════════════════╧═════════════════════════════════════════════╧══════════════════════════════════════════════════════════════════════════════════════════════════════════════╧════════════════════════════════════════════════════════════════════════════════════════════════════════╛\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "## Quantidade de dados nulos"
+       "### Dados nulos"
       ]
      },
      "metadata": {},
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Quantidade total de dados nulos: 50"
+       "#### Quantidade total de dados nulos: 50"
       ]
      },
      "metadata": {},
@@ -330,7 +330,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Quantidade de dados únicos"
+       "### Dados únicos"
       ]
      },
      "metadata": {},
@@ -339,7 +339,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Quantidade total de dados únicos: 1328"
+       "#### Quantidade total de dados únicos: 1328"
       ]
      },
      "metadata": {},
@@ -389,7 +389,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Dados mais comuns por coluna"
+       "### Dados mais comuns por coluna"
       ]
      },
      "metadata": {},
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Latitude - Coluna Númerica"
+       "### Latitude - Coluna Numérica"
       ]
      },
      "metadata": {},
@@ -568,7 +568,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Longitude - Coluna Númerica"
+       "### Longitude - Coluna Numérica"
       ]
      },
      "metadata": {},
@@ -612,7 +612,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Destination - Coluna Categórica"
+       "### Destination - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1046,7 +1046,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Region - Coluna Categórica"
+       "### Region - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1340,7 +1340,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Country - Coluna Categórica"
+       "### Country - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1400,7 +1400,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Category - Coluna Categórica"
+       "### Category - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1516,7 +1516,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Approximate Annual Tourists - Coluna Categórica"
+       "### Approximate Annual Tourists - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1604,7 +1604,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Currency - Coluna Categórica"
+       "### Currency - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1646,7 +1646,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Majority Religion - Coluna Categórica"
+       "### Majority Religion - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1684,7 +1684,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Famous Foods - Coluna Categórica"
+       "### Famous Foods - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1834,7 +1834,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Language - Coluna Categórica"
+       "### Language - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1906,7 +1906,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Best Time to Visit - Coluna Categórica"
+       "### Best Time to Visit - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1952,7 +1952,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Cost of Living - Coluna Categórica"
+       "### Cost of Living - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -1982,7 +1982,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Safety - Coluna Categórica"
+       "### Safety - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -2018,7 +2018,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Cultural Significance - Coluna Categórica"
+       "### Cultural Significance - Coluna Categórica"
       ]
      },
      "metadata": {},
@@ -2452,7 +2452,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Description - Coluna Categórica"
+       "### Description - Coluna Categórica"
       ]
      },
      "metadata": {},
